<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_bnpl"
            android:icon="@drawable/bnpl_icon"
            android:title="@string/menu_bnpl" />
        <item
            android:id="@+id/nav_services"
            android:icon="@drawable/services_icon"
            android:title="@string/menu_services" />
        <item
            android:id="@+id/nav_projects"
            android:icon="@drawable/projects_icon"
            android:title="@string/menu_projects" />
        <item
            android:id="@+id/nav_aboutus"
            android:icon="@drawable/about_us_icon"
            android:title="@string/menu_aboutus" />
        <item
            android:id="@+id/nav_contactus"
            android:icon="@drawable/contact_us_icon"
            android:title="@string/menu_contactus" />

    </group>

</menu>