<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.projects.ProjectsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="#054772"
        tools:context=".OngProjectScreen">

        <ScrollView
            android:layout_width="411dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/buildnowpaylater"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:orientation="horizontal"
                    android:padding="40dp">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="wrap_content"
                        android:layout_height="220dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/buildnowpaylater"
                        app:srcCompat="@drawable/buildnowpic" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="20dp"
                        android:layout_weight="1"
                        android:text="@string/build_now_pay_later"
                        android:textAlignment="center"
                        android:textColor="#ECBC31"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <View
                    android:id="@+id/divider3"
                    android:layout_width="350dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:background="@color/white" />

                <LinearLayout
                    android:id="@+id/modernhouse"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:orientation="horizontal"
                    android:padding="40dp">

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="20dp"
                        android:layout_weight="1"
                        android:text="@string/project_modern_house"
                        android:textAlignment="center"
                        android:textColor="#ECBC31"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:contentDescription="@string/projectmodernhouse"
                        app:srcCompat="@drawable/modernhousepic" />
                </LinearLayout>

                <View
                    android:id="@+id/divider4"
                    android:layout_width="350dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:background="@color/white" />

                <LinearLayout
                    android:id="@+id/portico"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="40dp">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="wrap_content"
                        android:layout_height="230dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/portico"
                        app:srcCompat="@drawable/proticopic" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="310dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="20dp"
                        android:layout_weight="1"
                        android:text="@string/traventine_portico"
                        android:textAlignment="center"
                        android:textColor="#ECBC31"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <View
                    android:id="@+id/divider2"
                    android:layout_width="350dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:background="@color/white" />

                <LinearLayout
                    android:id="@+id/interiordesign"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="40dp">

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="240dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/interior_design"
                        android:textAlignment="center"
                        android:textColor="#ECBC31"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="wrap_content"
                        android:layout_height="140dp"
                        android:layout_marginStart="30dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/interiordesign"
                        app:srcCompat="@drawable/intdesignpic" />
                </LinearLayout>

                <View
                    android:id="@+id/divider5"
                    android:layout_width="350dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:background="@color/white" />

                <LinearLayout
                    android:id="@+id/esports"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="40dp">

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="wrap_content"
                        android:layout_height="150dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/esports"
                        app:srcCompat="@drawable/esportspic"
                        tools:ignore="ImageContrastCheck" />

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="240dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:text="@string/interior_design"
                        android:textAlignment="center"
                        android:textColor="#ECBC31"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>