<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.projects.ProjectsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/compProj"
            android:layout_width="match_parent"
            android:layout_height="255dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="42dp"
            android:clickable="true"
            app:layout_constraintBottom_toTopOf="@+id/ongProj"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/compPic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/comppic"
                app:shapeAppearanceOverlay="@style/roundcorners"
                app:srcCompat="@drawable/comppic"
                android:clickable="false"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="210dp"
                android:layout_marginEnd="10dp"
                android:shadowColor="@color/text_shadow"
                android:shadowDx="8"
                android:shadowDy="8"
                android:shadowRadius="4"
                android:text="@string/recent_projects"
                android:textAlignment="textEnd"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/ongProj"
            android:layout_width="match_parent"
            android:layout_height="255dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="64dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:clickable="true">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ongPic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/ongpic"
                app:shapeAppearanceOverlay="@style/roundcorners"
                app:srcCompat="@drawable/ongpic" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="210dp"
                android:layout_marginEnd="10dp"
                android:shadowColor="@color/text_shadow"
                android:shadowDx="8"
                android:shadowDy="8"
                android:shadowRadius="4"
                android:text="@string/ongoing_projects"
                android:textAlignment="textEnd"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>