<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/bottom_header"
        android:layout_width="match_parent"
        android:layout_height="191dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pop_eb"
            android:gravity="center"
            android:text="@string/nav_bottom_1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#000000"
            android:textSize="19dp" />

        <LinearLayout
            android:id="@+id/cv_one"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="#040520"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView8"
                app:srcCompat="@drawable/corevalues_icons_1"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="105dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="0dp"
                android:contentDescription="@string/nav_bottom_2" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="0dp"
                android:layout_weight="1"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:gravity="left"
                    android:lineSpacingExtra="8sp"
                    android:text="@string/nav_bottom_2"
                    android:textColor="#FFFFFF"
                    android:textSize="13sp" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:background="#040520"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pop_eb"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/nav_bottom_3"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#FFFFFF"
            android:textSize="14dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>